# NekiraReflect

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
Documents/NekiraReflectDynamic/: NekiraReflectDynamic.CN.MD  NekiraReflectDynamic.EN.MD
Documents/NekiraReflectStatic/: NekiraReflectStatic.CN.MD  NekiraReflectStatic.EN.MD
Documents/NekiraReflectTool/: NekiraReflectTool.CN.MD  NekiraReflectTool.EN.MD
Documents/NekiraReflection/: NekiraReflection.CN.MD  NekiraReflection.EN.MD
Documents/README/: README.CN.MD  README.EN.MD
DynamicReflect/: DynamicReflect.cpp  DynamicReflect.hpp  DynamicTypeInfo.hpp
DynamicReflect/TypeCollection/: CoreType.hpp  DynamicTypeInfo.hpp  MemberFuncWrapper.hpp  Utilities.hpp
DynamicReflect/TypeRegist/: TypeInfoRegistry.hpp
Generation/Attributes/: ReflectAttributes.hpp
Generation/Generator/: ReflectGenerator.cpp  ReflectGenerator.hpp
InfoCollection/: InfoCollection.hpp
Main/: CMakeLists.txt  NekiraReflectGen.cpp  NekiraReflectTool.cpp  NekiraSerializeTool.cpp
ReflectMacro/: ReflectMacro.cpp  ReflectMacro.hpp
StaticReflect/: StaticReflect.cpp  StaticReflect.hpp
StaticReflect/TypeCollection/: StaticTypeInfo.hpp
StaticReflect/TypeExtraction/: TypeExtration.hpp
TypeExtraction/: FunctionTraits.hpp  TypeExtraction.hpp  TypeExtration.cpp  TypeExtration.hpp  VariableTraits.hpp
cmake/: NekiraReflectToolConfig.cmake  NekiraReflectToolConfig.cmake.in  NekiraReflectionConfig.cmake.in  NekiraReflectionLibConfig.cmake.in
include/NekiraReflect/: CMakeLists.txt  Core.hpp
include/NekiraReflect/DynamicReflect/: CMakeLists.txt  DynamicReflect.hpp
include/NekiraReflect/DynamicReflect/Accessor/: ReflectAccessor.hpp
include/NekiraReflect/DynamicReflect/Core/: Core.hpp
include/NekiraReflect/DynamicReflect/Macros/: CoreMacros.hpp
include/NekiraReflect/DynamicReflect/Registry/: ReflectionRegistry.hpp
include/NekiraReflect/DynamicReflect/TypeCollection/: CoreType.hpp  MemberFuncWrapper.hpp  Utilities.hpp
include/NekiraReflect/DynamicReflect/TypeRegist/: TypeInfoRegistry.hpp
include/NekiraReflect/DynamicReflect/Utility/: Utilities.hpp
include/NekiraReflect/Generation/: CMakeLists.txt
include/NekiraReflect/Generation/Attributes/: ReflectAttributes.hpp
include/NekiraReflect/Generation/Generator/: ReflectGenerator.cpp  ReflectGenerator.hpp
include/NekiraReflect/Generation/Tools/: ASTConsume.hpp  CodeConsume.hpp  CodeGenerateHelper.hpp  CodeScanHelper.hpp  CodeScanner.hpp  CodeUtilities.hpp  MetaInfo.hpp  ReflectGenSettings.hpp
include/NekiraReflect/Registry/: ReflectionRegistry.hpp
include/NekiraReflect/Serialization/: CMakeLists.txt
include/NekiraReflect/Serialization/Archive/: ArchiveBase.hpp  JsonArchive.hpp
include/NekiraReflect/StaticReflect/: CMakeLists.txt  StaticReflect.hpp  StaticTypeInfo.hpp
include/NekiraReflect/StaticReflect/Core/: Core.hpp
include/NekiraReflect/StaticReflect/TypeCollection/: StaticTypeInfo.hpp
include/NekiraReflect/StaticReflect/TypeExtraction/: FunctionTraits.hpp  TypeExtraction.hpp
include/NekiraReflect/TypeExtraction/: FunctionTraits.hpp  TypeExtraction.hpp  VariableTraits.hpp
source/: DynamicReflect.cpp  ReflectGenerator.cpp  StaticReflect.cpp
source/DynamicReflect/: DynamicReflect.cpp
source/DynamicReflect/Registry/: ReflectionRegistry.cpp
source/DynamicReflect/TypeCollection/: ClassTypeInfo.cpp  EnumTypeInfo.cpp
source/DynamicReflect/Utility/: Utilities.cpp
source/Generation/: CodeScanHelper.cpp
source/Generation/Generator/: ReflectGenerator.cpp
source/Generation/Tools/: CodeConsume.cpp  CodeGenerateHelper.cpp  CodeScanHelper.cpp
source/Registry/: ReflectionRegistry.cpp
source/Serialization/Archive/: ArchiveBase.cpp
source/StaticReflect/: StaticReflect.cpp
